[package]
name = "ebay"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
dotenvy = "0.15.7"
env_logger = "0.11.8"
fantoccini = "0.22.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tempfile = "3.20.0"
tokio = { version = "1.45.1", features = ["full"] }
which = "8.0.0"
